--- a/index.html
+++ b/index.html
@@ -3,27 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://unpkg.com/gridjs/dist/gridjs.production.min.js"></script>
-  <link href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css" rel="stylesheet"/>
+    <title>GridJS Example</title>
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: left;
+        }
+    </style>
 </head>
 <body>
 
-    <div id="table-gridjs"></div>
+<div id="table-container"></div>
 
-  <script>
-    new gridjs.Grid({
-      columns: ["Name", "Email", "Phone Number"],
-      data: [
-        ["arsal", "arsal@example.com", "(021) 01 222 3333"],
-        ["jazirah", "iraa@gmail.com", "(022) 22 888 4444"],
-        ["salsabila", "salsa@gmail.com", "(021) 22 654 00033"],
-        ["rakasiwi", "rakasiwi@gmail.com", "+62322 876 1233"],
-        ["fadillah", "fadillah@mail.com", "(022) 22 87 8356"]
-      ]
-    }).render(document.getElementById("table-gridjs"));
-  </script>
+<script>
+class Table {
+    constructor(containerId, columns, data) {
+        this.container = document.getElementById(containerId);
+        this.columns = columns;
+        this.data = data;
+        this.render();
+    }
 
-    
+    render() {
+        const table = document.createElement('table');
+        table.innerHTML = `
+            <tr>
+                ${this.columns.map(column => `<th>${column}</th>`).join('')}
+            </tr>
+            ${this.data.map(row => `<tr>${row.map(cell => `<td>${cell}</td>`).join('')}</tr>`).join('')}
+        `;
+        this.container.appendChild(table);
+    }
+}
+
+const columns = ["Name", "Phone Number", "Email"];
+const data = [
+    ["arsal al qital ", "(021) 1234 5678", "alice@example.com"],
+    ["fadillah ramdan", "(022) 8765 4321", "bob@example.com"],
+    ["rakasiwi", "(023) 2468 1357", "charlie@example.com"]
+];
+
+new Table('table-container', columns, data);
+</script>
+
 </body>
 </html>
