--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GridJS Example</title>
+    <title>basic oop</title>
     <style>
         table {
             border-collapse: collapse;
@@ -43,9 +43,9 @@ class Table {
 
 const columns = ["Name", "Phone Number", "Email"];
 const data = [
-    ["arsal al qital ", "(021) 1234 5678", "alice@example.com"],
-    ["fadillah ramdan", "(022) 8765 4321", "bob@example.com"],
-    ["rakasiwi", "(023) 2468 1357", "charlie@example.com"]
+    ["arsal al qital ", "(021) 1234 5678", "arsalalqital@gmail.com"],
+    ["fadillah ramdan", "(022) 8765 4321", "fadillah123@gmail.com"],
+    ["rakasiwi", "(023) 2468 1357", "rakasiwi@gmail.com"]
 ];
 
 new Table('table-container', columns, data);
